--- a/index.html
+++ b/index.html
@@ -1,29 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Depende</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="imagex/png" href="./icon.ico">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3033823635924781"
-     crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+
     <div id="container">
 
-        <div class="question">
+        <div class="question-container">
             <label for="pergunta">Digita aqui sua dúvida:</label>
             <input size="75" type="text" id="pergunta" name="pergunta">
             <button id="run">Obter Resposta!</button>
         </div>
-    
-        <div class="container">
-            <img src="imagem.png" alt="Imagem">
+
+        <div class="meme-container">
+            <img id="meme" class="img_meme" alt="Imagem que contem a resposta com a pergunta digitada pelo usuario">
         </div>
+
+
+
+        <footer>
+            <h2>DEVS:</h2>
+            <ul>
+                <li><a href="http://github.com/emeath">emeath</a></li>
+                <li><a href="http://github.com/pedroquintao">pedroquintao</a></li>
+                <li><a href="http://github.com/rafamarquesrmb">rafamarquesrmb</a></li>
+            </ul>
+        </footer>
+
+        <span id="siteseal">
+            <script async type="text/javascript"
+                src="https://seal.godaddy.com/getSeal?sealID=mCXiTovvvQxJcX7rpJsndeXvMVjVltgIpevSEtNIpXtE5lnZkcHdQKaPFmeA"></script>
+        </span>
     </div>
 
 
+
     <script src="script.js"></script>
+
 </body>
+
 </html>
