Adds target _blank to open link in new tab

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <footer>
             <h2>DEVS:</h2>
             <ul>
-                <li><a href="http://github.com/emeath">emeath</a></li>
-                <li><a href="http://github.com/pedroquintao">pedroquintao</a></li>
-                <li><a href="http://github.com/rafamarquesrmb">rafamarquesrmb</a></li>
+                <li><a target="_blank" href="http://github.com/emeath">emeath</a></li>
+                <li><a target="_blank" href="http://github.com/pedroquintao">pedroquintao</a></li>
+                <li><a target="_blank" href="http://github.com/rafamarquesrmb">rafamarquesrmb</a></li>
             </ul>
         </footer>
 
