--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Depende</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Depende APP | A resposta para tudo em TI</title>
+    <meta name="description"
+        content='A famosa resposta "depende" para qualquer pergunta sobre Programação, Desenvolvimento de Software e TI em geral, utilizando memes divertidos.' />
+    <meta name="keywords"
+        content="depende, programação, desenvolvimento, perguntas e respostas, perguntas, respostas, software, ti, tecnologia, app">
+    <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" type="imagex/png" href="./icon.ico">
+    <meta name="robots" content="index,follow" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3033823635924781"
         crossorigin="anonymous"></script>
 </head>
@@ -16,30 +21,122 @@
     <div id="container">
 
         <div class="question-container">
+            <h1 class="easter-egg">DEPENDE.APP</h1>
             <label for="pergunta">Digita aqui sua dúvida:</label>
             <input size="75" type="text" id="pergunta" name="pergunta">
             <button id="run">Obter Resposta!</button>
         </div>
 
         <div class="meme-container">
-            <img id="meme" class="img_meme" alt="Imagem que contem a resposta com a pergunta digitada pelo usuario">
+            <div id="loading" class="hidden">
+                <div class="lds-roller">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <span>loading</span>
+            </div>
+
+            <img id="meme" class="img_meme initialhidden"
+                alt="Imagem de um MEME contendo a resposta para a pergunta digitada pelo usuario" />
         </div>
-
-
 
         <footer>
             <h2>DEVS:</h2>
             <ul>
-                <li><a target="_blank" href="http://github.com/emeath">emeath</a></li>
-                <li><a target="_blank" href="http://github.com/pedroquintao">pedroquintao</a></li>
-                <li><a target="_blank" href="http://github.com/rafamarquesrmb">rafamarquesrmb</a></li>
+                <li class="link_box">
+                    <a target="_blank" href="https://github.com/emeath">
+                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24"
+                            viewBox="0,0,256,256">
+                            <g fill="#333333" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                                stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                                font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                                style="mix-blend-mode: normal">
+                                <path
+                                    d="M128,243.2c-63.6232,0 -115.2,-51.5768 -115.2,-115.2v0c0,-63.6232 51.5768,-115.2 115.2,-115.2v0c63.6232,0 115.2,51.5768 115.2,115.2v0c0,63.6232 -51.5768,115.2 -115.2,115.2z"
+                                    id="shape"></path>
+                            </g>
+                            <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                                stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                                font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                                style="mix-blend-mode: normal">
+                                <g transform="scale(8.53333,8.53333)">
+                                    <path
+                                        d="M15,3c-6.627,0 -12,5.373 -12,12c0,5.623 3.872,10.328 9.092,11.63c-0.056,-0.162 -0.092,-0.35 -0.092,-0.583v-2.051c-0.487,0 -1.303,0 -1.508,0c-0.821,0 -1.551,-0.353 -1.905,-1.009c-0.393,-0.729 -0.461,-1.844 -1.435,-2.526c-0.289,-0.227 -0.069,-0.486 0.264,-0.451c0.615,0.174 1.125,0.596 1.605,1.222c0.478,0.627 0.703,0.769 1.596,0.769c0.433,0 1.081,-0.025 1.691,-0.121c0.328,-0.833 0.895,-1.6 1.588,-1.962c-3.996,-0.411 -5.903,-2.399 -5.903,-5.098c0,-1.162 0.495,-2.286 1.336,-3.233c-0.276,-0.94 -0.623,-2.857 0.106,-3.587c1.798,0 2.885,1.166 3.146,1.481c0.896,-0.307 1.88,-0.481 2.914,-0.481c1.036,0 2.024,0.174 2.922,0.483c0.258,-0.313 1.346,-1.483 3.148,-1.483c0.732,0.731 0.381,2.656 0.102,3.594c0.836,0.945 1.328,2.066 1.328,3.226c0,2.697 -1.904,4.684 -5.894,5.097c1.098,0.573 1.899,2.183 1.899,3.396v2.734c0,0.104 -0.023,0.179 -0.035,0.268c4.676,-1.639 8.035,-6.079 8.035,-11.315c0,-6.627 -5.373,-12 -12,-12z">
+                                    </path>
+                                </g>
+                            </g>
+                        </svg>
+                        emeath
+                    </a>
+                </li>
+                <li class="link_box">
+                    <a target="_blank" href="https://github.com/pedroquintao">
+                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24"
+                            viewBox="0,0,256,256">
+                            <g fill="#333333" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                                stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                                font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                                style="mix-blend-mode: normal">
+                                <path
+                                    d="M128,243.2c-63.6232,0 -115.2,-51.5768 -115.2,-115.2v0c0,-63.6232 51.5768,-115.2 115.2,-115.2v0c63.6232,0 115.2,51.5768 115.2,115.2v0c0,63.6232 -51.5768,115.2 -115.2,115.2z"
+                                    id="shape"></path>
+                            </g>
+                            <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                                stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                                font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                                style="mix-blend-mode: normal">
+                                <g transform="scale(8.53333,8.53333)">
+                                    <path
+                                        d="M15,3c-6.627,0 -12,5.373 -12,12c0,5.623 3.872,10.328 9.092,11.63c-0.056,-0.162 -0.092,-0.35 -0.092,-0.583v-2.051c-0.487,0 -1.303,0 -1.508,0c-0.821,0 -1.551,-0.353 -1.905,-1.009c-0.393,-0.729 -0.461,-1.844 -1.435,-2.526c-0.289,-0.227 -0.069,-0.486 0.264,-0.451c0.615,0.174 1.125,0.596 1.605,1.222c0.478,0.627 0.703,0.769 1.596,0.769c0.433,0 1.081,-0.025 1.691,-0.121c0.328,-0.833 0.895,-1.6 1.588,-1.962c-3.996,-0.411 -5.903,-2.399 -5.903,-5.098c0,-1.162 0.495,-2.286 1.336,-3.233c-0.276,-0.94 -0.623,-2.857 0.106,-3.587c1.798,0 2.885,1.166 3.146,1.481c0.896,-0.307 1.88,-0.481 2.914,-0.481c1.036,0 2.024,0.174 2.922,0.483c0.258,-0.313 1.346,-1.483 3.148,-1.483c0.732,0.731 0.381,2.656 0.102,3.594c0.836,0.945 1.328,2.066 1.328,3.226c0,2.697 -1.904,4.684 -5.894,5.097c1.098,0.573 1.899,2.183 1.899,3.396v2.734c0,0.104 -0.023,0.179 -0.035,0.268c4.676,-1.639 8.035,-6.079 8.035,-11.315c0,-6.627 -5.373,-12 -12,-12z">
+                                    </path>
+                                </g>
+                            </g>
+                        </svg>
+                        pedroquintao
+                    </a>
+                </li>
+                <li class="link_box">
+                    <a target="_blank" href="https://github.com/rafamarquesrmb">
+                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="24" height="24"
+                            viewBox="0,0,256,256">
+                            <g fill="#333333" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                                stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                                font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                                style="mix-blend-mode: normal">
+                                <path
+                                    d="M128,243.2c-63.6232,0 -115.2,-51.5768 -115.2,-115.2v0c0,-63.6232 51.5768,-115.2 115.2,-115.2v0c63.6232,0 115.2,51.5768 115.2,115.2v0c0,63.6232 -51.5768,115.2 -115.2,115.2z"
+                                    id="shape"></path>
+                            </g>
+                            <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                                stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                                font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                                style="mix-blend-mode: normal">
+                                <g transform="scale(8.53333,8.53333)">
+                                    <path
+                                        d="M15,3c-6.627,0 -12,5.373 -12,12c0,5.623 3.872,10.328 9.092,11.63c-0.056,-0.162 -0.092,-0.35 -0.092,-0.583v-2.051c-0.487,0 -1.303,0 -1.508,0c-0.821,0 -1.551,-0.353 -1.905,-1.009c-0.393,-0.729 -0.461,-1.844 -1.435,-2.526c-0.289,-0.227 -0.069,-0.486 0.264,-0.451c0.615,0.174 1.125,0.596 1.605,1.222c0.478,0.627 0.703,0.769 1.596,0.769c0.433,0 1.081,-0.025 1.691,-0.121c0.328,-0.833 0.895,-1.6 1.588,-1.962c-3.996,-0.411 -5.903,-2.399 -5.903,-5.098c0,-1.162 0.495,-2.286 1.336,-3.233c-0.276,-0.94 -0.623,-2.857 0.106,-3.587c1.798,0 2.885,1.166 3.146,1.481c0.896,-0.307 1.88,-0.481 2.914,-0.481c1.036,0 2.024,0.174 2.922,0.483c0.258,-0.313 1.346,-1.483 3.148,-1.483c0.732,0.731 0.381,2.656 0.102,3.594c0.836,0.945 1.328,2.066 1.328,3.226c0,2.697 -1.904,4.684 -5.894,5.097c1.098,0.573 1.899,2.183 1.899,3.396v2.734c0,0.104 -0.023,0.179 -0.035,0.268c4.676,-1.639 8.035,-6.079 8.035,-11.315c0,-6.627 -5.373,-12 -12,-12z">
+                                    </path>
+                                </g>
+                            </g>
+                        </svg>
+                        rafamarquesrmb
+                    </a>
+                </li>
             </ul>
+            <span id="siteseal">
+                <script async type="text/javascript"
+                    src="https://seal.godaddy.com/getSeal?sealID=mCXiTovvvQxJcX7rpJsndeXvMVjVltgIpevSEtNIpXtE5lnZkcHdQKaPFmeA"></script>
+            </span>
+            <span>
+                <p>Depende.app © 2023 | Criado e mantido por Matheus Martins (@emeath)</p>
+            </span>
         </footer>
 
-        <span id="siteseal">
-            <script async type="text/javascript"
-                src="https://seal.godaddy.com/getSeal?sealID=mCXiTovvvQxJcX7rpJsndeXvMVjVltgIpevSEtNIpXtE5lnZkcHdQKaPFmeA"></script>
-        </span>
     </div>
 
 
